--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -5,6 +5,7 @@
 
 body {
     font-family: "Roboto", sans-serif;
+    height: 100vh;
     display: flex;
     flex-direction: column;
 }
@@ -25,7 +26,8 @@ header {
     flex: 1;
     justify-content: space-between;
     align-items: center;
-    max-width: 1500px;
+    max-width: 1200px;
+    padding: 0 50px;
     /* border: 2px solid red; */
 }
 
@@ -33,7 +35,7 @@ header {
     font-size: 24px;
     color: #f9faf8;
     font-weight: bold;
-    padding: 16px;
+    padding: 16px 0;
 }
 
 .right-header {
@@ -43,17 +45,46 @@ header {
 ul {
     display: flex;
     list-style-type: none;
-    padding: 12px;
-    gap: 16px;
+    gap: 26px;
 }
 
 .sec-1 {
+    display: flex;
+    justify-content: center;
     background-color: #1f2937;
 }
 
+.sec-1-container {
+    display: flex;
+    flex: 1;
+    margin: 100px 0 100px;
+    padding: 50px;
+    max-width: 1200px;
+    justify-content: space-evenly;
+    align-items: center;
+    /* border: 1px solid red; */
+}
+
 .sec-1 img {
-    height: 200px;
-    width: 300px;
+    height: 360px;
+    width: 550px;
+    box-shadow: 2px 4px 16px rgba(0, 0, 0, 0.16);
+}
+
+.left-sec-1 h1 {
+    font-size: 48px;
+    color: #f9faf8;
+    margin-right: 100px;
+}
+
+.left-sec-1 p {
+    font-size: 18px;
+    color: #E5E7EB;
+    margin-right: 100px;
+}
+
+.left-sec-1 .signup {
+    margin: 20px 0;
 }
 
 .sec-3 {
@@ -66,4 +97,23 @@ footer {
 
 .signup {
     background-color: #3882f6;
+    border-radius: 10px;
+    color: #E5E7EB;
+    font-weight: bold;
+    padding: 8px 24px 8px;
+    border: none;
+}
+
+a {
+    color: inherit;
+    text-decoration: none;
+}
+
+.sec-2 {
+    display: flex;
+}
+
+.sec-2 h2 {
+    font-size: 36px;
+    color: #1f2937
 }
