--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -8,6 +8,7 @@ body {
     height: 100vh;
     display: flex;
     flex-direction: column;
+    line-height: 1.5;
 }
 
 main {
@@ -72,9 +73,11 @@ ul {
 }
 
 .left-sec-1 h1 {
+    line-height: 1;
     font-size: 48px;
     color: #f9faf8;
     margin-right: 100px;
+    margin-bottom: 10px;
 }
 
 .left-sec-1 p {
@@ -85,6 +88,50 @@ ul {
 
 .left-sec-1 .signup {
     margin: 20px 0;
+}
+
+.sec-2 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    padding: 80px;
+}
+
+.sec-2 h2 {
+    font-size: 36px;
+    color: #1f2937;
+    margin-bottom: 40px;
+}
+
+.sec-2-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+    max-width: 1200px;
+}
+
+.sec-2-item {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 20px;
+    /* border: 1px solid red; */
+}
+
+.sec-2-container img {
+    width: 200px;
+    height: 200px;
+    border-radius: 25px;
+    border: 4px solid #3882f6;
+    margin-bottom: 10px;
+}
+
+.sec-2-container p {
+    font-size: 18px;
+    max-width: 200px;
+    text-align: center;
 }
 
 .sec-3 {
@@ -107,13 +154,4 @@ footer {
 a {
     color: inherit;
     text-decoration: none;
-}
-
-.sec-2 {
-    display: flex;
-}
-
-.sec-2 h2 {
-    font-size: 36px;
-    color: #1f2937
 }
