--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -28,11 +28,12 @@ header {
     align-items: center;
     max-width: 1200px;
     padding: 0 50px;
-    /* border: 2px solid red; */
+    border-bottom: 1px solid #EEE;
+    /* border: 2px solid red; */ 
 }
 
 .left-header{
-    font-size: 24px;
+    font-size: 36px;
     color: #f9faf8;
     font-weight: bold;
     padding: 16px 0;
@@ -40,6 +41,8 @@ header {
 
 .right-header {
     color: #f9faf8;
+    align-self: flex-end;
+    margin-bottom: 20px;
 }
 
 ul {
@@ -68,6 +71,7 @@ ul {
 .sec-1 img {
     height: 360px;
     width: 550px;
+    border-radius: 5px;
 }
 
 .left-sec-1 h1 {
@@ -84,7 +88,7 @@ ul {
     margin-right: 100px;
 }
 
-.left-sec-1 .signup {
+.left-sec-1 .contact {
     margin: 20px 0;
 }
 
@@ -176,7 +180,7 @@ ul {
     margin-right: 140px;
 }
 
-.signup.white-border {
+.contact.white-border {
     border: 2px solid #E5E7EB;
 }
 
@@ -192,7 +196,7 @@ footer p {
     color: #E5E7EB;
 }
 
-.signup {
+.contact {
     background-color: #3882f6;
     border-radius: 10px;
     color: #E5E7EB;
